# python-project-lvl1

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: make-lint.yml
brain_games/: brain_games.py  cli.py  engine.py  games_settings.py  greeting_user.py  results_processing.py  setting_the_task.py  setup.cfg
brain_games/games/: calc_game.py  even_game.py  gcd_game.py  prime_game.py  progression_game.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
