[tool.poetry]
name = "hexlet-code"
version = "0.2.0"
description = "First project on Hexlet"
authors = ["andrew.dragunskih <andrew.dragunskih@yandex.ru>"]
repository = "https://github.com/AndrewDragunskih/python-project-lvl1"
packages = [
	{ include = "brain_games" },
	]
classifiers = [
	"Environment :: Console",
	"Intended Audience :: End Users/Desktop",
	"Operating System :: Unix",
	"Programming Language :: Python :: 3.8",
	"Topic :: Games/Entertainment"
	]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.0"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
